TrendParamDef and SimulationParamDef getter
